# SpeurenMetKrul

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  conanfile.txt
src/: CurlRequest.cpp  CurlRequest.hpp  Speur.cpp  Speur.hpp  main.cpp
src/factories/: InstructionFactory.cpp  InstructionFactory.hpp
src/instructions/: BaseInstruction.cpp  BaseInstruction.hpp
src/instructions/End/: EndInstruction.cpp  EndInstruction.hpp
src/instructions/Functions/: FunInstruction.cpp  FunInstruction.hpp  RetInstruction.cpp  RetInstruction.hpp
src/instructions/IntegerOperations/: AbsInstruction.cpp  AbsInstruction.hpp  AddInstruction.cpp  AddInstruction.hpp  DecInstruction.cpp  DecInstruction.hpp  DivInstruction.cpp  DivInstruction.hpp  IncInstruction.cpp  IncInstruction.hpp  ModInstruction.cpp  ModInstruction.hpp  MulInstruction.cpp  MulInstruction.hpp  NegInstruction.cpp  NegInstruction.hpp  SubInstruction.cpp  SubInstruction.hpp
src/instructions/StringOperations/: CatInstruction.cpp  CatInstruction.hpp  DupInstruction.cpp  DupInstruction.hpp  EnlInstruction.cpp  EnlInstruction.hpp  IDXInstruction.cpp  IDXInstruction.hpp  LenInstruction.cpp  LenInstruction.hpp  RevInstruction.cpp  RevInstruction.hpp  RotInstruction.cpp  RotInstruction.hpp  SLCInstruction.cpp  SLCInstruction.hpp
src/instructions/TestAndJumps/: GEQInstruction.cpp  GEQInstruction.hpp  GGEInstruction.cpp  GGEInstruction.hpp  GGTInstruction.cpp  GGTInstruction.hpp  GLEInstruction.cpp  GLEInstruction.hpp  GLTInstruction.cpp  GLTInstruction.hpp  GNEInstruction.cpp  GNEInstruction.hpp  GTOInstruction.cpp  GTOInstruction.hpp
src/instructions/ValuesAndTypes/: Digits.cpp  Digits.hpp  LabelDefinition.cpp  LabelDefinition.hpp  LabelReference.cpp  LabelReference.hpp  TextInstruction.cpp  TextInstruction.hpp  VariableAssignment.cpp  VariableAssignment.hpp  VariableReference.cpp  VariableReference.hpp
